; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid.c_grid_clear_cell.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid.c_grid_clear_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { %struct.grid_line* }
%struct.grid_line = type { %struct.grid_cell_entry*, i32, %struct.grid_cell_entry* }
%struct.grid_cell_entry = type { i64, i64, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i64 }
%struct.grid_cell = type { i64, i64, %struct.TYPE_2__, i32 }

@grid_cleared_entry = common dso_local global i32 0, align 4
@COLOUR_FLAG_RGB = common dso_local global i64 0, align 8
@GRID_LINE_EXTENDED = common dso_local global i32 0, align 4
@grid_cleared_cell = common dso_local global i32 0, align 4
@COLOUR_FLAG_256 = common dso_local global i64 0, align 8
@GRID_FLAG_BG256 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grid*, i64, i64, i64)* @grid_clear_cell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @grid_clear_cell(%struct.grid* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.grid*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.grid_line*, align 8
  %10 = alloca %struct.grid_cell_entry*, align 8
  %11 = alloca %struct.grid_cell*, align 8
  store %struct.grid* %0, %struct.grid** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load %struct.grid*, %struct.grid** %5, align 8
  %13 = getelementptr inbounds %struct.grid, %struct.grid* %12, i32 0, i32 0
  %14 = load %struct.grid_line*, %struct.grid_line** %13, align 8
  %15 = load i64, i64* %7, align 8
  %16 = getelementptr inbounds %struct.grid_line, %struct.grid_line* %14, i64 %15
  store %struct.grid_line* %16, %struct.grid_line** %9, align 8
  %17 = load %struct.grid_line*, %struct.grid_line** %9, align 8
  %18 = getelementptr inbounds %struct.grid_line, %struct.grid_line* %17, i32 0, i32 2
  %19 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %18, align 8
  %20 = load i64, i64* %6, align 8
  %21 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %19, i64 %20
  store %struct.grid_cell_entry* %21, %struct.grid_cell_entry** %10, align 8
  %22 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %23 = call i32 @memcpy(%struct.grid_cell_entry* %22, i32* @grid_cleared_entry, i32 32)
  %24 = load i64, i64* %8, align 8
  %25 = icmp ne i64 %24, 8
  br i1 %25, label %26, label %74

26:                                               ; preds = %4
  %27 = load i64, i64* %8, align 8
  %28 = load i64, i64* @COLOUR_FLAG_RGB, align 8
  %29 = and i64 %27, %28
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %57

31:                                               ; preds = %26
  %32 = load %struct.grid_line*, %struct.grid_line** %9, align 8
  %33 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %34 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %35 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %34, i32 0, i32 3
  %36 = load i32, i32* %35, align 8
  %37 = call i32 @grid_get_extended_cell(%struct.grid_line* %32, %struct.grid_cell_entry* %33, i32 %36)
  %38 = load i32, i32* @GRID_LINE_EXTENDED, align 4
  %39 = load %struct.grid_line*, %struct.grid_line** %9, align 8
  %40 = getelementptr inbounds %struct.grid_line, %struct.grid_line* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = or i32 %41, %38
  store i32 %42, i32* %40, align 8
  %43 = load %struct.grid_line*, %struct.grid_line** %9, align 8
  %44 = getelementptr inbounds %struct.grid_line, %struct.grid_line* %43, i32 0, i32 0
  %45 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %44, align 8
  %46 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %47 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %45, i64 %48
  %50 = bitcast %struct.grid_cell_entry* %49 to %struct.grid_cell*
  store %struct.grid_cell* %50, %struct.grid_cell** %11, align 8
  %51 = load %struct.grid_cell*, %struct.grid_cell** %11, align 8
  %52 = bitcast %struct.grid_cell* %51 to %struct.grid_cell_entry*
  %53 = call i32 @memcpy(%struct.grid_cell_entry* %52, i32* @grid_cleared_cell, i32 32)
  %54 = load i64, i64* %8, align 8
  %55 = load %struct.grid_cell*, %struct.grid_cell** %11, align 8
  %56 = getelementptr inbounds %struct.grid_cell, %struct.grid_cell* %55, i32 0, i32 1
  store i64 %54, i64* %56, align 8
  br label %73

57:                                               ; preds = %26
  %58 = load i64, i64* %8, align 8
  %59 = load i64, i64* @COLOUR_FLAG_256, align 8
  %60 = and i64 %58, %59
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %68

62:                                               ; preds = %57
  %63 = load i32, i32* @GRID_FLAG_BG256, align 4
  %64 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %65 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %64, i32 0, i32 3
  %66 = load i32, i32* %65, align 8
  %67 = or i32 %66, %63
  store i32 %67, i32* %65, align 8
  br label %68

68:                                               ; preds = %62, %57
  %69 = load i64, i64* %8, align 8
  %70 = load %struct.grid_cell_entry*, %struct.grid_cell_entry** %10, align 8
  %71 = getelementptr inbounds %struct.grid_cell_entry, %struct.grid_cell_entry* %70, i32 0, i32 2
  %72 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %71, i32 0, i32 0
  store i64 %69, i64* %72, align 8
  br label %73

73:                                               ; preds = %68, %31
  br label %74

74:                                               ; preds = %73, %4
  ret void
}

declare dso_local i32 @memcpy(%struct.grid_cell_entry*, i32*, i32) #1

declare dso_local i32 @grid_get_extended_cell(%struct.grid_line*, %struct.grid_cell_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
